@@ -1,5 +1,0 @@
-// Temp.jsx
-
-const Temp = () => <h1>Our First Test</h1>;
-
-export default Temp;
